--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ws": "^8.18.1"
   }
